Updates of images and values

--- a/theme/index.html
+++ b/theme/index.html
@@ -13,7 +13,7 @@
   <!-- Basic Page Needs
   ================================================== -->
   <meta charset="utf-8">
-  <title>Aviato | E-commerce template</title>
+  <title>Beautechful</title>
 
   <!-- Mobile Specific Metas
   ================================================== -->
@@ -86,31 +86,38 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 text-center">
-          <p data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".1">PRODUCTS</p>
-          <h1 data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".5">The beauty of nature <br> is hidden in details.</h1>
-          <a data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".8" class="btn" href="shop.html">Shop Now</a>
+          <h1 data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".1">Where Beauty Meets Tech</h1>
+          <p data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".5">At Beautechful, our mission is to redefine the beauty industry through personalization, innovation, and sustainability. We believe that beauty is not one-size-fits-all, and everyone deserves a cosmetics experience tailored to their unique identity.</p>
         </div>
       </div>
     </div>
   </div>
-  <div class="slider-item th-fullpage hero-area" style="background-image: url(images/slider/slider-3.jpg);">
+  <div class="slider-item th-fullpage hero-area" style="background-image: url(images/slider/slider-2.jpeg);">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 text-left">
-          <p data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".1">PRODUCTS</p>
-          <h1 data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".5">The beauty of nature <br> is hidden in details.</h1>
-          <a data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".8" class="btn" href="shop.html">Shop Now</a>
+          <h1 data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".1">Personalization</h1>
+          <p data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".5">We are dedicated to harnessing cutting-edge color-matching technology to provide real-time skin analysis and foundation in-store production. Our commitment to personalization extends to our partnerships with luxury cosmetic brands, indulging our customers in a premium, personalized beauty experience. Furthermore, our technology will provide unlimited ethnic colors options, that are poorly present in beauty retail stores nowadays.</p>
         </div>
       </div>
     </div>
   </div>
-  <div class="slider-item th-fullpage hero-area" style="background-image: url(images/slider/slider-2.jpg);">
+  <div class="slider-item th-fullpage hero-area" style="background-image: url(images/slider/slider-3.JPEG);">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 text-right">
-          <p data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".1">PRODUCTS</p>
-          <h1 data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".5">The beauty of nature <br> is hidden in details.</h1>
-          <a data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".8" class="btn" href="shop.html">Shop Now</a>
+          <h1 data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".1">Innovation</h1>
+          <p data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".5">Innovation is at the heart of everything we do. We envision a beauty industry that embraces the future, and our Foundation Station represents the pinnacle of this vision. By challenging traditional methods of foundation selection, we empower individuals to confidently express themselves through makeup that truly reflects their personality and style. We believe that true innovation is not just about technology but also about inspiring confidence and creativity.</p>
+        </div>
+      </div>
+    </div>
+  </div>  
+  <div class="slider-item th-fullpage hero-area" style="background-image: url(images/slider/slider-4.JPEG);">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 text-right">
+          <h1 data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".1">Sustainability</h1>
+          <p data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".5">As part of our commitment to sustainability, our mission is to reshape the entire cosmetics production landscape. We aspire to catalyze transformative change in current production chains, aiming to significantly reduce overproduction, minimize waste, and foster the emergence of circular economies within the beauty industry. For us sustainability is not just a choice but a responsibility, and we want to inspire an industry-wide shift toward environmentally conscious solutions.</p>
         </div>
       </div>
     </div>
@@ -121,18 +128,17 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-6">
-				<img class="img-responsive" src="images/about/about.jpg">
+				<img class="img-responsive" src="images/about/foundation_station.jpeg">
 			</div>
 			<div class="col-md-6">
-				<h2 class="mt-40">About Our Shop</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius enim, accusantium repellat ex autem numquam iure officiis facere vitae itaque.</p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam qui vel cupiditate exercitationem, ea fuga est velit nulla culpa modi quis iste tempora non, suscipit repellendus labore voluptatem dicta amet?</p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam qui vel cupiditate exercitationem, ea fuga est velit nulla culpa modi quis iste tempora non, suscipit repellendus labore voluptatem dicta amet?</p>
-				<a href="contact.html" class="btn btn-main mt-20">Download Company Profile</a>
+				<h2 class="mt-40">Foundation Station</h2>
+				<p>With a commitment to pushing the boundaries of beauty technology, we introduce our first product called "Foundation Station". It enables personalized in-store foundation production under 1 minute. The Foundation Station is an advanced beauty device designed for cosmetic retail spaces. Equipped with cutting-edge sensors, it provides real-time skin analysis for accurate color matching. Users can personalize their foundation formulations based on their unique skin tones. Its practical and user-friendly design seamlessly integrates into retail settings, and it is compatible with luxury brand cartridges. The station prioritizes sustainability by reducing waste through on-demand foundation creation. Additional features include adjustable output, self-cleaning mechanisms, and smart connectivity, offering a practical and tailored solution for modern beauty needs.</p>
 			</div>
 		</div>
 	</div>
 </section>
+
+
 
 <section class="team-members ">
 	<div class="container">
@@ -140,56 +146,65 @@
 			<div class="title"><h2>Team Members</h2></div>
 		</div>
 		<div class="row">
-			<div class="col-md-3">
+			<div class="col-md-4">
 				<div class="team-member text-center">
 					<img class="img-circle" src="images/team/aliaksei.jpg">
 					<h4>Aliaksei Ashkinadze</h4>
 					<p>Chief Execution Specialist</p>
-					<h5>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius enim, accusantium repellat ex autem numquam iure officiis facere vitae itaque.
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam qui vel cupiditate exercitationem, ea fuga est velit nulla culpa modi quis iste tempora non, suscipit repellendus labore voluptatem dicta amet?
-					</h5>
+					<h5>I believe that Beautechful can significantly contribute to 
+						beauty industry waste reduction and make the cosmetics production cycle more sustainable. 
+						Furthermore, we aim to make beauty consultants' work easier, more exciting, and faster. 
+						Our products will enable cosmetic retail stores to offer their customers unique services 
+						that will increase their loyalty and improve customer experience.</h5>
 				</div>	
 			</div>
-			<div class="col-md-3">
+			<div class="col-md-4">
 				<div class="team-member text-center">
 					<img class="img-circle" src="images/team/danylo.jpg">
 					<h4>Danylo Semerak</h4>
 					<p>Chief IT Specialist</p>
-					<h5>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius enim, accusantium repellat ex autem numquam iure officiis facere vitae itaque.
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam qui vel cupiditate exercitationem, ea fuga est velit nulla culpa modi quis iste tempora non, suscipit repellendus labore voluptatem dicta amet?
-					</h5>
+					<h5>My goal at Beautechful is to revolutionize the beauty industry through technology, 
+						aiming to unveil a heightened level of personalized experiences. Picture a scenario
+						 where everyone feels as if their favorite makeup brand has crafted a special collection 
+						 just for them. At the core of this ambition is the utilization of 
+						the most cutting-edge technologies to introduce a fresh approach to cosmetics.</h5>
 				</div>
 			</div>
-			<div class="col-md-3">
+			<div class="col-md-4">
 				<div class="team-member text-center">
 					<img class="img-circle" src="images/team/csilla.jpg">
 					<h4>Csilla Spillert</h4>
 					<p>Chief Chemistry Specialist</p>
-					<h5>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius enim, accusantium repellat ex autem numquam iure officiis facere vitae itaque.
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam qui vel cupiditate exercitationem, ea fuga est velit nulla culpa modi quis iste tempora non, suscipit repellendus labore voluptatem dicta amet?
-					</h5>
+					<h5>The beauty industry has missed out on technological innovations. Moreover, 
+						the 21st century demands sustainable solutions, especially for this industry. 
+						I believe that personalization and optimized source use are essential to tapping 
+						into this market. With Beautechful, we want to revolutionize cosmetics production, 
+						where no compromises should be made. I’m glad that I found the right people who 
+						share the same vision and values and can start an entrepreneur journey together.</h5>
 				</div>
 			</div>
 		</div>		
 		<div class="row">
-			<div class="col-md-3">
+			<div class="col-md-6">
 				<div class="team-member text-center">
 					<img class="img-circle" src="images/team/jeremy.jpg">
 					<h4>Jeremy Mrzyglocki</h4>
 					<p>Chief Electrical Specialist</p>
-					<h5>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius enim, accusantium repellat ex autem numquam iure officiis facere vitae itaque.
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam qui vel cupiditate exercitationem, ea fuga est velit nulla culpa modi quis iste tempora non, suscipit repellendus labore voluptatem dicta amet?
-					</h5>
+					<h5>The intense first-phase development of the “Foundation Station” at the university is 
+						a showcase of how much we can achieve with dedication and focus. I am looking forward
+						 to not only further developing the tech behind Beautechful,
+						 but also our group’s journey into the actual market space.</h5>
 				</div>
 			</div>
-			<div class="col-md-3">
+			<div class="col-md-6">
 				<div class="team-member text-center">
 					<img class="img-circle" src="images/team/severin.jpg">
 					<h4>Severin Schumacher</h4>
 					<p>Chief Mechanical Specialist</p>
-					<h5>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius enim, accusantium repellat ex autem numquam iure officiis facere vitae itaque.
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam qui vel cupiditate exercitationem, ea fuga est velit nulla culpa modi quis iste tempora non, suscipit repellendus labore voluptatem dicta amet?
-					</h5>
+					<h5>As an engineer, solving problems with innovative tech is my passion, and
+						 weaving in sustainability makes it even more thrilling. Our prototype is shaping up fast,
+						  highlighting what we can achieve when we put our hearts into it. 
+						I am excited about taking Beautechful's tech to the next level</h5>
 				</div>
 			</div>
 		</div>
@@ -202,9 +217,7 @@
 		<div class="row">
 			<div class="col-md-12">
 				<h2>Video presentation</h2>
-				<a class="play-icon" href="https://www.youtube.com/embed/Tq6W5wIqR4o" data-toggle="lightbox">
-					<i class="tf-ion-ios-play"></i>
-				</a>
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/Tq6W5wIqR4o?si=BPbQJ13Gz3WI_pJn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 			</div>
 		</div>
 	</div>
