--- a/theme/index.html
+++ b/theme/index.html
@@ -64,7 +64,7 @@
 							<g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" font-size="40"
 								font-family="AustinBold, Austin" font-weight="bold">
 								<g id="Group" transform="translate(-258.000000, -297.000000)" fill="#000000">
-									<text id="AVIATO">
+									<text id="BEAUTECHFUL">
 										<tspan x="108.94" y="325">BEAUTECHFUL</tspan>
 									</text>
 								</g>
@@ -173,7 +173,7 @@
 			<div class="col-md-4">
 				<div class="team-member text-center">
 					<img class="img-circle" src="images/team/csilla.jpg">
-					<h4>Csilla Spillert</h4>
+					<h4>Csilla Spiller</h4>
 					<p>Chief Chemistry Specialist</p>
 					<h5>The beauty industry has missed out on technological innovations. Moreover, 
 						the 21st century demands sustainable solutions, especially for this industry. 
