update team profile pictures

--- a/theme/index.html
+++ b/theme/index.html
@@ -148,7 +148,7 @@
 		<div class="row">
 			<div class="col-md-4">
 				<div class="team-member text-center">
-					<img class="img-circle" src="images/team/aliaksei.jpg">
+					<img class="img-circle" src="images/team/aliaksei_official.jpg">
 					<h4>Aliaksei Ashkinadze</h4>
 					<p>Chief Execution Specialist</p>
 					<h5>I believe that Beautechful can significantly contribute to 
@@ -160,7 +160,7 @@
 			</div>
 			<div class="col-md-4">
 				<div class="team-member text-center">
-					<img class="img-circle" src="images/team/danylo.jpg">
+					<img class="img-circle" src="images/team/danylo_official.jpg">
 					<h4>Danylo Semerak</h4>
 					<p>Chief IT Specialist</p>
 					<h5>My goal at Beautechful is to revolutionize the beauty industry through technology, 
@@ -172,7 +172,7 @@
 			</div>
 			<div class="col-md-4">
 				<div class="team-member text-center">
-					<img class="img-circle" src="images/team/csilla.jpg">
+					<img class="img-circle" src="images/team/csilla_official.jpg">
 					<h4>Csilla Spiller</h4>
 					<p>Chief Chemistry Specialist</p>
 					<h5>The beauty industry has missed out on technological innovations. Moreover, 
@@ -187,7 +187,7 @@
 		<div class="row">
 			<div class="col-md-6">
 				<div class="team-member text-center">
-					<img class="img-circle" src="images/team/jeremy.jpg">
+					<img class="img-circle" src="images/team/jeremy_official.jpg">
 					<h4>Jeremy Mrzyglocki</h4>
 					<p>Chief Electrical Specialist</p>
 					<h5>The intense first-phase development of the “Foundation Station” at the university is 
@@ -198,7 +198,7 @@
 			</div>
 			<div class="col-md-6">
 				<div class="team-member text-center">
-					<img class="img-circle" src="images/team/severin.jpg">
+					<img class="img-circle" src="images/team/severin_official.jpg">
 					<h4>Severin Schumacher</h4>
 					<p>Chief Mechanical Specialist</p>
 					<h5>As an engineer, solving problems with innovative tech is my passion, and
@@ -217,7 +217,7 @@
 		<div class="row">
 			<div class="col-md-12">
 				<h2>Video presentation</h2>
-				<iframe width="560" height="315" src="https://www.youtube.com/embed/Tq6W5wIqR4o?si=BPbQJ13Gz3WI_pJn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+				<iframe src="https://www.youtube.com/embed/Tq6W5wIqR4o?si=BPbQJ13Gz3WI_pJn" title="Foundation station demonstration" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 			</div>
 		</div>
 	</div>
