--- a/theme/index.html
+++ b/theme/index.html
@@ -59,11 +59,11 @@
 				<div class="logo text-center">
 					<a href="index.html">
 						<!-- replace logo here -->
-						<svg width="555px" height="29px" viewBox="0 0 155 29" version="1.1" xmlns="http://www.w3.org/2000/svg"
+						<svg width="100%" height="29px" viewBox="0 0 305 29" version="1.1" xmlns="http://www.w3.org/2000/svg"
 							xmlns:xlink="http://www.w3.org/1999/xlink">
 							<g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" font-size="40"
 								font-family="AustinBold, Austin" font-weight="bold">
-								<g id="Group" transform="translate(-258.000000, -297.000000)" fill="#000000">
+								<g id="Group" transform="translate(-108.000000, -297.000000)" fill="#000000">
 									<text id="BEAUTECHFUL">
 										<tspan x="108.94" y="325">BEAUTECHFUL</tspan>
 									</text>
