privacy policy; terms and conditions

--- a/theme/index.html
+++ b/theme/index.html
@@ -354,6 +354,7 @@ Start Call To Action
 				</ul>
 
 				<p class="copyright-text">Copyright &copy;2023, Designed &amp; Developed by Beautechful</p>
+				<p class="copyright-text"> <a href="terms-and-conditions.html"> Terms and Conditions </a> &amp; <a href="privacy-policy.html">Privacy and Policy</a></p>
 			</div>
 		</div>
 	</div>
