--- a/theme/index.html
+++ b/theme/index.html
@@ -332,22 +332,22 @@ Start Call To Action
 			<div class="col-md-12">
 				<ul class="social-media">
 					<li>
-						<a href="https://www.facebook.com/themefisher">
+						<a href="index.html">
 							<i class="tf-ion-social-facebook"></i>
 						</a>
 					</li>
 					<li>
-						<a href="https://www.instagram.com/themefisher">
+						<a href="https://instagram.com/beautechful_?igshid=Yjc0OGI0MDc4OA==">
 							<i class="tf-ion-social-instagram"></i>
 						</a>
 					</li>
 					<li>
-						<a href="https://www.twitter.com/themefisher">
+						<a href="index.html">
 							<i class="tf-ion-social-twitter"></i>
 						</a>
 					</li>
 					<li>
-						<a href="https://www.pinterest.com/themefisher/">
+						<a href="index.html">
 							<i class="tf-ion-social-pinterest"></i>
 						</a>
 					</li>
